--- a/school/views/student.xml
+++ b/school/views/student.xml
@@ -1,13 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
+    <record id="view_school_student_form" model="ir.ui.view">
+        <field name="name">school.student.form</field>
+        <field name="model">school.student</field>
+        <field name="arch" type="xml">
+            <form>
+                <group>
+                    <field name="name"/>
+                    <field name="age" readonly="1"/>
+                    <field name="birth_date"/>
+                    <field name="final_exam_grade"/>
+                    <field name="subject_ids"/>
+                </group>
+
+            </form>
+        </field>
+
+    </record>
+
     <record id="action_school_student" model="ir.actions.act_window">
         <field name="name">Students</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">school.student</field>
-        <field name="view_mode">tree, form</field>
+        <field name="view_mode">tree,form</field>
     </record>
 
-    <submenuitem id="menu_school_subjects"
+    <menuitem id="menu_school_students"
               name="Students"
               parent="menu_school_operations"
               action="action_school_student"
